kubernetes/apps/default/homarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
spec:
  selector:
    app: homarr
  ports:
    - name: http
      port: 80
      targetPort: http
