kubernetes/apps/default/homarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr
  namespace: default
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - homarr.${SECRET_LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: homarr
          port: 80
